2009-01-06  Badlop  <badlop@process-one.net>

	* src/msgs/ru.msg: Fix typo (thanks to Dominges)

2009-01-05  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Added a flag to avoid certificate validation
	* src/tls/tls.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

2009-01-03  Badlop  <badlop@process-one.net>

	* src/*.erl: Fix EDoc comments

2009-01-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: deliver notification depending on
	presence-based-delivery configuration (EJAB-827). notification code
	rewrite.

	* src/mod_pubsub/mod_pubsub.erl: code cleanning, minor bugfixes
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)

2008-12-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix in "from" attribute checking

2008-12-28  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Add resource to the from packet attribute
	if missing (EJAB-812).

2008-12-24  Badlop  <badlop@process-one.net>

	* src/aclocal.m4: Fixes in configure script: fix
	disable-ejabberd_zlib and disable-pam; in case of problems, PAM
	verification aborts with error instead of warning. (EJAB-787)
	* src/configure.ac: Likewise
	* src/configure: Likewise

2008-12-23  Badlop  <badlop@process-one.net>

	* src/acl.erl: New ACL: shared_group (thanks to Maxim Ryazanov)
	* doc/guide.tex: Likewise

	* src/mod_shared_roster.erl: Push new group members when
	registered or manually added to group: EJAB-730 EJAB-731 EJAB-732
	EJAB-767 EJAB-794. When user is added to group, push it to other
	members, and other members to it. When user is removed from group,
	push deletion to other members, and other members to it. When user
	is registered, push him to members of group @all@. When user is